--- a/cw.ipynb
+++ b/cw.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# INM701 Coursework\n",
-    "## Imtiaz Ali 200022830"
+    "#\n",
+    "## Imtiaz Ali"
    ]
   },
   {
